# bzlmod-issue

./: .envrc  .gitignore  MODULE.bazel  go.mod
api/: BUILD.bazel  hello.proto
cmd/hello/: BUILD.bazel  main.go
tools/: gopackagesdriver.sh
