load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "hello_proto",
    srcs = ["hello.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "hello_go_proto",
    importpath = "github.com/mrdomino/bzlmod-issue/api",
    proto = ":hello_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "api",
    srcs = ["file.go"],
    embed = [":hello_go_proto"],
    importpath = "github.com/mrdomino/bzlmod-issue/api",
    visibility = ["//visibility:public"],
)
